--- a/res/layout/activity_confirm_appointment.xml
+++ b/res/layout/activity_confirm_appointment.xml
@@ -16,7 +16,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_Xsmall"
-            android:text="Appointment for:"
+            android:text="@string/appointment_for"
             android:textSize="@dimen/text_Xsmall"
             android:textStyle="bold" />
 
@@ -33,7 +33,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_Xsmall"
-            android:text="To Attend:"
+            android:text="@string/to_attend"
             android:textSize="@dimen/text_Xsmall"
             android:textStyle="bold" />
 
@@ -50,7 +50,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_Xsmall"
-            android:text="At:"
+            android:text="@string/at"
             android:textSize="@dimen/text_Xsmall"
             android:textStyle="bold" />
 
@@ -67,7 +67,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_Xsmall"
-            android:text="Confirmation email to:"
+            android:text="@string/confirm_email"
             android:textSize="@dimen/text_Xsmall"
             android:textStyle="bold" />
 
@@ -84,7 +84,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_Xsmall"
-            android:text="Confirmation SMS to:"
+            android:text="@string/confirm_sms"
             android:textSize="@dimen/text_Xsmall"
             android:textStyle="bold" />
 
@@ -101,7 +101,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_large"
-            android:text="Book if details are correct:"
+            android:text="@string/book_question"
             android:textSize="@dimen/text_Xsmall"
             android:textStyle="bold" />
 
@@ -120,7 +120,7 @@
                 android:layout_marginTop="@dimen/padding_medium"
                 android:layout_weight="0.5"
                 android:background="@color/lightBlue"
-                android:text="Book" />
+                android:text="@string/book" />
 
             <Button
                 android:id="@+id/btn_no_appointment"
@@ -131,7 +131,7 @@
                 android:layout_marginTop="@dimen/padding_medium"
                 android:layout_weight="0.5"
                 android:background="@color/lightBlue"
-                android:text="Cancel" />
+                android:text="@string/cancel" />
         </LinearLayout>
     </LinearLayout>
 
