--- a/res/layout/activity_service_user_search.xml
+++ b/res/layout/activity_service_user_search.xml
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.0"
-            android:hint="DAY"
+            android:hint="@string/day"
             android:inputType="number"
             android:maxLength="2"
             android:singleLine="true" />
@@ -42,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.0"
-            android:hint="MONTH"
+            android:hint="@string/month"
             android:inputType="number"
             android:maxLength="2"
             android:singleLine="true" />
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.0"
-            android:hint="YEAR"
+            android:hint="@string/year"
             android:inputType="number"
             android:maxLength="4"
             android:singleLine="true" />
@@ -65,9 +65,18 @@
         android:text="@string/btn_search" />
 
     <TextView
+        android:id="@+id/tv_search_results"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/search_result" />
+    
+    <TextView
+        android:id="@+id/tv_no_user_found"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/no_user_found"
+        android:textSize="@dimen/text_large"
+        android:textColor="@color/red" />
 
     <ListView
         android:id="@+id/search_results_list"
