--- a/app/src/main/res/layout/action_bar_custom.xml
+++ b/app/src/main/res/layout/action_bar_custom.xml
@@ -7,9 +7,10 @@
 
     <TextView
         android:id="@+id/tv_action_bar"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:paddingLeft="-48dp"
+        android:gravity="center_horizontal"
         android:text="SMART"
         style="@android:style/TextAppearance.Holo.Widget.ActionBar.Title"/>
 </RelativeLayout>
