--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,11 +1,20 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- API 21+ theme. -->
-    <style
+<!--    <style
         name="AppTheme" parent="android:Theme.Material.Light">
         <item name="android:homeAsUpIndicator">@drawable/ic_menu_grey600_24dp</item>
     </style>
 
-<!--    <style name="customEdit" parent="@android:style/Widget.EditText">
+&lt;!&ndash;    <style name="customEdit" parent="@android:style/Widget.EditText">
         <item name="android:textColorHint">#3b64a8</item>
-    </style>-->
+    </style>&ndash;&gt;-->
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+    </style>
+
+    <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">true</item>
+        <item name="color">@android:color/holo_green_dark</item>
+    </style>
 </resources>
