--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,15 @@
 <resources>
     <!-- Default Application theme -->
-    <style
+<!--    <style
         name="AppTheme" parent="android:Theme.Holo.Light">
+    </style>-->
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+    </style>
+
+    <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">true</item>
+        <item name="color">@android:color/holo_green_dark</item>
     </style>
 </resources>
