--- a/app/src/main/res/layout-v21/drawer_item_layout.xml
+++ b/app/src/main/res/layout-v21/drawer_item_layout.xml
@@ -7,5 +7,5 @@
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:textAppearance="?android:attr/textAppearanceMedium"
-    android:textColor="@color/white"
+    android:textColor="@color/black"
     android:textSize="25sp"/>
