--- a/app/src/main/res/layout/navigation_drawer_layout.xml
+++ b/app/src/main/res/layout/navigation_drawer_layout.xml
@@ -20,5 +20,5 @@
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
-        android:background="@android:color/holo_red_dark"/>
+        android:background="@color/white"/>
 </android.support.v4.widget.DrawerLayout>
