change appointmnet spinner list

--- a/app/src/main/res/layout/activity_appointment_type_spinner.xml
+++ b/app/src/main/res/layout/activity_appointment_type_spinner.xml
@@ -9,7 +9,7 @@
         android:id="@+id/appointment_spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:entries="@array/appointment_type" />
+        android:entries="@array/appointment_type_list" />
 
     <Spinner
         android:id="@+id/clinic_service_option_spinner"
