--- a/app/src/main/res/layout/activity_appointment_calendar.xml
+++ b/app/src/main/res/layout/activity_appointment_calendar.xml
@@ -35,9 +35,8 @@
             android:textSize="@dimen/text_Xsmall" />
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_appointment_list"
+    <ListView
+        android:id="@+id/lv_appointment_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="vertical" />
+        android:layout_height="wrap_content"/>
 </LinearLayout>
