--- a/app/src/main/res/layout/list_appointment_layout.xml
+++ b/app/src/main/res/layout/list_appointment_layout.xml
@@ -42,6 +42,7 @@
 
         <!--Surface View Start-->
         <LinearLayout
+            android:id="@+id/ll_appt_list_item"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
