--- a/app/src/main/res/layout/list_appointment_layout.xml
+++ b/app/src/main/res/layout/list_appointment_layout.xml
@@ -18,6 +18,7 @@
             android:background="#FF5534"
             android:gravity="center"
             android:tag="Bottom3"
+            android:paddingRight="5dp"
             android:weightSum="10">
 
             <TextView
