change colour value to CAPITALS

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -6,7 +6,7 @@
     <color name="black">#000000</color>
     <color name="green">#2BE10E</color>
     <color name="blue">#198CFF</color>
-    <color name="lightBlue">#66ccff</color>
+    <color name="lightBlue">#66CCFF</color>
     <color name="purple">#C80CDF</color>
     <color name="brown">#CC5E03</color>
     <color name="grey">#676766</color>
