--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -2,13 +2,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="ie.teamchile.smartapp.activities.CalendarActivity">
 
-    <CalendarView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-        
-    </CalendarView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Where are you?"
+        android:textSize="@dimen/text_medium"
+        android:textStyle="bold" />
 
+    <ListView
+        android:id="@+id/lv_time_record_clinics"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:listSelector="@color/lightBlue"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Check in"
+        android:textSize="@dimen/text_Xlarge" />
 </LinearLayout>
-
