--- a/app/src/main/res/layout-land/activity_parity_details.xml
+++ b/app/src/main/res/layout-land/activity_parity_details.xml
@@ -1,85 +1,89 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="vertical" >
+<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal" >
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1.2"
-            android:paddingRight="@dimen/padding_Xsmall"
-            android:text="@string/parity_dob"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/grey"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.9"
-            android:paddingRight="@dimen/padding_Xsmall"
-            android:text="@string/parity_gestation"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/grey"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="Name"
+                android:textSize="18sp" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.8"
-            android:paddingRight="@dimen/padding_Xsmall"
-            android:text="@string/parity_gender"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/grey"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+            <TextView
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:text="DOB"
+                android:textSize="18sp" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingRight="@dimen/padding_Xsmall"
-            android:text="@string/parity_weight"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/grey"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+            <TextView
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:text="Hospital Number"
+                android:textSize="18sp" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.3"
-            android:text="@string/parity_mode_of_birth"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/grey"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
-        
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.8"
-            android:text="@string/parity_birth_outcome"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/grey"
-            android:textSize="@dimen/text_Xsmall"
-            android:textStyle="bold" />
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="Gestation"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="Gender"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="Weight(g)"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:text="Mode"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="Outcome"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="Hearing"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="NBST"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="Vitamin K"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical" />
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/parity_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:dividerHeight="3sp" />
-
-</LinearLayout>
+</HorizontalScrollView>
