--- a/app/src/main/res/layout/activity_quick_menu.xml
+++ b/app/src/main/res/layout/activity_quick_menu.xml
@@ -25,12 +25,12 @@
         android:textSize="@dimen/text_large" />
 
     <Button
-        android:id="@+id/calendar"
+        android:id="@+id/start_stop_clinic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/padding_small"
         android:layout_weight="1.0"
-        android:text="@string/calendar"
+        android:text="@string/start_stop_clinic"
         android:textSize="@dimen/text_large" />
 
     <Button
