--- a/app/src/main/res/layout-land/activity_parity_details.xml
+++ b/app/src/main/res/layout-land/activity_parity_details.xml
@@ -16,67 +16,100 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="Name"
-                android:textSize="18sp" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/grey"
+                android:textSize="@dimen/text_Xsmall"
+                android:textStyle="bold"/>
 
             <TextView
-                android:layout_width="150dp"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:text="DOB"
-                android:textSize="18sp" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/grey"
+                android:textSize="@dimen/text_Xsmall"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:text="Hospital Number"
-                android:textSize="18sp" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/grey"
+                android:textSize="@dimen/text_Xsmall"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="Gestation"
-                android:textSize="18sp" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/grey"
+                android:textSize="@dimen/text_Xsmall"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:text="Gender"
-                android:textSize="18sp" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/grey"
+                android:textSize="@dimen/text_Xsmall"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="Weight(g)"
-                android:textSize="18sp" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/grey"
+                android:textSize="@dimen/text_Xsmall"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:text="Mode"
-                android:textSize="18sp" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/grey"
+                android:textSize="@dimen/text_Xsmall"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:text="Outcome"
-                android:textSize="18sp" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/grey"
+                android:textSize="@dimen/text_Xsmall"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:text="Hearing"
-                android:textSize="18sp" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/grey"
+                android:textSize="@dimen/text_Xsmall"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="NBST"
-                android:textSize="18sp" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/grey"
+                android:textSize="@dimen/text_Xsmall"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:text="Vitamin K"
-                android:textSize="18sp" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/grey"
+                android:textSize="@dimen/text_Xsmall"
+                android:textStyle="bold"/>
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
