--- a/app/src/main/res/layout-land/parity_list_layout.xml
+++ b/app/src/main/res/layout-land/parity_list_layout.xml
@@ -9,76 +9,76 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="18sp" />
+        android:textSize="@dimen/text_small" />
 
     <TextView
         android:id="@+id/dob_parity"
-        android:layout_width="150dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="18sp" />
+        android:textSize="@dimen/text_small" />
 
     <TextView
         android:id="@+id/hospital_number"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="18sp" />
+        android:textSize="@dimen/text_small" />
 
     <TextView
         android:id="@+id/gestation_parity"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="18sp" />
+        android:textSize="@dimen/text_small" />
 
     <TextView
         android:id="@+id/gender_parity"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="18sp" />
+        android:textSize="@dimen/text_small" />
 
     <TextView
         android:id="@+id/weight_parity"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="18sp" />
+        android:textSize="@dimen/text_small" />
 
     <TextView
         android:id="@+id/mode_of_birth_parity"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="18sp" />
+        android:textSize="@dimen/text_small" />
 
     <TextView
         android:id="@+id/birth_outcome_parity"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="18sp" />
+        android:textSize="@dimen/text_small" />
 
     <TextView
         android:id="@+id/birth_hearing"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="18sp" />
+        android:textSize="@dimen/text_small" />
 
     <TextView
         android:id="@+id/birth_nbst"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="18sp" />
+        android:textSize="@dimen/text_small" />
 
     <TextView
         android:id="@+id/birth_vit_k"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="18sp" />
+        android:textSize="@dimen/text_small" />
 
 </LinearLayout>
