--- a/app/src/main/res/layout/activity_clinic_time_record.xml
+++ b/app/src/main/res/layout/activity_clinic_time_record.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Where are you?"
+        android:text="@string/select_clinic"
         android:textSize="@dimen/text_medium"
         android:textStyle="bold" />
 
@@ -21,21 +21,24 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:weightSum="2.0" >
 
         <Button
             android:id="@+id/btn_check_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Check in"
-            android:textSize="@dimen/text_large" />
+            android:text="@string/start_clinic"
+            android:textSize="@dimen/text_medium"
+            android:layout_weight="1.0"/>
 
         <Button
             android:id="@+id/btn_check_out"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Check out"
-            android:textSize="@dimen/text_large" />
+            android:text="@string/stop_clinic"
+            android:textSize="@dimen/text_medium"
+            android:layout_weight="1.0"/>
     </LinearLayout>
 
     <EditText
