--- a/app/src/main/res/layout/list_appointment_layout.xml
+++ b/app/src/main/res/layout/list_appointment_layout.xml
@@ -86,7 +86,7 @@
                 android:layout_height="30dp"
                 android:layout_weight="0.3"
                 android:paddingLeft="5dp"
-                android:background="@color/black" />
+                android:background="@color/light_grey" />
 
             <!--Surface View End-->
         </LinearLayout>
