update editText hint colour to #A9A9A9 and style to italics

--- a/app/src/main/res/layout/activity_clinic_time_record.xml
+++ b/app/src/main/res/layout/activity_clinic_time_record.xml
@@ -38,7 +38,9 @@
             android:layout_height="wrap_content"
             android:text="@string/stop_clinic"
             android:textSize="@dimen/text_medium"
-            android:layout_weight="1.0"/>
+            android:layout_weight="1.0"
+            android:textColorHint="#A9A9A9"
+            android:textStyle="italic" />
     </LinearLayout>
 
     <EditText
