--- a/app/src/main/res/layout/activity_service_user_search.xml
+++ b/app/src/main/res/layout/activity_service_user_search.xml
@@ -13,7 +13,8 @@
         android:hint="@string/enter_name"
         android:paddingTop="@dimen/padding_medium"
         android:singleLine="true"
-        android:textColorHint="#B6B6B6" />
+        android:textColorHint="#A9A9A9"
+        android:textStyle="italic" />
 
     <EditText
         android:id="@+id/search_hospital_number"
@@ -21,7 +22,8 @@
         android:layout_height="wrap_content"
         android:hint="@string/enter_hospital_number"
         android:singleLine="true"
-        android:textColorHint="#A9A9A9" />
+        android:textColorHint="#A9A9A9"
+        android:textStyle="italic" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,7 +39,9 @@
             android:hint="@string/day"
             android:inputType="number"
             android:maxLength="2"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:textColorHint="#A9A9A9"
+            android:textStyle="italic" />
 
         <EditText
             android:id="@+id/search_dob_month"
@@ -47,7 +51,9 @@
             android:hint="@string/month"
             android:inputType="number"
             android:maxLength="2"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:textColorHint="#A9A9A9"
+            android:textStyle="italic" />
 
         <EditText
             android:id="@+id/search_dob_year"
@@ -57,7 +63,9 @@
             android:hint="@string/year"
             android:inputType="number"
             android:maxLength="4"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:textColorHint="#A9A9A9"
+            android:textStyle="italic" />
     </LinearLayout>
 
     <Button
