--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,8 +80,7 @@
             android:inputType="text"
             android:textColor="@color/black"
             android:maxLines="1"
-            android:textColorHint="#A9A9A9"
-            android:textStyle="italic" />
+            android:textColorHint="#A9A9A9" />
 
         <EditText
             android:id="@+id/password"
@@ -95,8 +94,7 @@
             android:inputType="textPassword"
             android:textColor="@color/black"
             android:maxLines="1"
-            android:textColorHint="#A9A9A9"
-            android:textStyle="italic" />
+            android:textColorHint="#A9A9A9" />
 
         <Button
             android:id="@+id/login"
