--- a/app/src/main/res/layout/activity_service_user_search.xml
+++ b/app/src/main/res/layout/activity_service_user_search.xml
@@ -13,8 +13,7 @@
         android:hint="@string/enter_name"
         android:paddingTop="@dimen/padding_medium"
         android:singleLine="true"
-        android:textColorHint="#A9A9A9"
-        android:textStyle="italic" />
+        android:textColorHint="#A9A9A9" />
 
     <EditText
         android:id="@+id/search_hospital_number"
@@ -22,8 +21,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/enter_hospital_number"
         android:singleLine="true"
-        android:textColorHint="#A9A9A9"
-        android:textStyle="italic" />
+        android:textColorHint="#A9A9A9" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,8 +38,7 @@
             android:inputType="number"
             android:maxLength="2"
             android:singleLine="true"
-            android:textColorHint="#A9A9A9"
-            android:textStyle="italic" />
+            android:textColorHint="#A9A9A9" />
 
         <EditText
             android:id="@+id/search_dob_month"
@@ -52,8 +49,7 @@
             android:inputType="number"
             android:maxLength="2"
             android:singleLine="true"
-            android:textColorHint="#A9A9A9"
-            android:textStyle="italic" />
+            android:textColorHint="#A9A9A9" />
 
         <EditText
             android:id="@+id/search_dob_year"
@@ -64,8 +60,7 @@
             android:inputType="number"
             android:maxLength="4"
             android:singleLine="true"
-            android:textColorHint="#A9A9A9"
-            android:textStyle="italic" />
+            android:textColorHint="#A9A9A9" />
     </LinearLayout>
 
     <Button
